link to map/map.html

--- a/index.html
+++ b/index.html
@@ -16,22 +16,15 @@
     <div class="wrapper">
       <header>
         <h1>Armstrade</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/mschwarzer-dcmn/ArmsTrade">View the Project on GitHub <small>mschwarzer-dcmn/ArmsTrade</small></a></p>
-
 
         <ul>
+        <li><a href="map/map.html">View <strong>Armstrade Map</strong></a></li>
           <li><a href="https://github.com/mschwarzer-dcmn/ArmsTrade/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/mschwarzer-dcmn/ArmsTrade/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/mschwarzer-dcmn/ArmsTrade">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
-        
-        <a href="http://mschwarzer-dcmn.github.io/ArmsTrade/d3-worldmap-boilerplate/map.html">View Map</a>
-        
-        </section>
+
       <footer>
         <p>This project is maintained by <a href="https://github.com/mschwarzer-dcmn">mschwarzer-dcmn</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
